--- a/sdk2-jsdk-base/build.gradle
+++ b/sdk2-jsdk-base/build.gradle
@@ -1,19 +1,24 @@
 plugins {
     id 'java'
+    id 'maven'
 }
 
 group 'com.cc'
 version '1.0'
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
-test {
-    useJUnitPlatform()
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
+}
+
+uploadArchives {
+    repositories {
+        mavenDeployer {
+            mavenLocal()
+            //repository(url: uri('E:/m2/repo/'))
+        }
+    }
 }
