--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,9 @@
 rootProject.name = 'cc-java-sdk2'
 include 'sdk2-jsdk-base'
 include 'sdk2-jsdk-commons'
+include 'sdk2-jsdk-datasource'
 include 'sdk2-springboot-web'
+include 'sdk2-springboot-console'
+include 'sdk2-redis-client'
+include 'sdk2-rabbitmq-client'
 
