--- a/sdk2-jsdk-commons/build.gradle
+++ b/sdk2-jsdk-commons/build.gradle
@@ -4,7 +4,6 @@ plugins {
 }
 
 
-
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
@@ -17,7 +16,9 @@ dependencies {
     compile group: 'com.fasterxml.jackson.core', name: 'jackson-annotations', version: '2.10.3'
     compile group: 'com.alibaba', name: 'fastjson', version: '1.2.68'
     compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
-    compile group: 'org.ehcache', name: 'ehcache', version: '3.8.1'
+    compile('org.ehcache:ehcache:3.8.1') {
+        exclude(group: 'org.slf4j', module:'slf4j-api' )
+    }
 }
 
 tasks.withType(JavaCompile) {
