add new modules

--- a/settings.gradle
+++ b/settings.gradle
@@ -6,4 +6,5 @@ include 'sdk2-springboot-web'
 include 'sdk2-springboot-console'
 include 'sdk2-redis-client'
 include 'sdk2-rabbitmq-client'
+include 'sdk2-task-xxljob'
 
