--- a/sdk2-springboot-web/build.gradle
+++ b/sdk2-springboot-web/build.gradle
@@ -13,8 +13,11 @@ dependencies {
         exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
     }
     compile group: 'org.springframework.boot', name: 'spring-boot-starter-log4j2', version: '2.3.8.RELEASE'
-    compile ('org.springframework.boot:spring-boot-starter-validation:2.3.8.RELEASE') {
+    compile('org.springframework.boot:spring-boot-starter-validation:2.3.8.RELEASE') {
         exclude(group: 'org.springframework.boot', module: 'spring-boot-starter-logging')
+        exclude(group: 'org.springframework.boot', module: 'spring-boot-starter')
+    }
+    compile('org.springframework.boot:spring-boot-starter-aop:2.3.8.RELEASE') {
         exclude(group: 'org.springframework.boot', module: 'spring-boot-starter')
     }
     compile group: 'com.lmax', name: 'disruptor', version: '3.4.2'
